k8s-QA/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: QA
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: maestrodomb/frontend:d84d2e1abba90ed063e81fd1d5f6d3483311f859
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: QA
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
