k8s-QA/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  namespace: qa
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: alb
  rules:
  - host: qa.dombops.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service: { name: backend-svc, port: { number: 5000 } }
      - path: /
        pathType: Prefix
        backend:
          service: { name: frontend-svc, port: { number: 80 } }
  - host: www.qa.dombops.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service: { name: backend-svc, port: { number: 5000 } }
      - path: /
        pathType: Prefix
        backend:
          service: { name: frontend-svc, port: { number: 80 } }
  tls:
  - hosts: [qa.dombops.org, www.qa.dombops.org]
    secretName: adityajaiswal-com-tls   # <-- consistent, .com
